fix(auth page): repeating background not centred

--- a/res/css/views/auth/_AuthPage.pcss
+++ b/res/css/views/auth/_AuthPage.pcss
@@ -17,7 +17,7 @@ Please see LICENSE files in the repository root for full details.
     box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.5);
     /* elecord, background pattern */
     background-image: repeating-radial-gradient(
-        circle at 50% 41.5%,
+        circle at 50% 420px,
         rgba(255, 255, 255, 0.03),
         rgba(255, 255, 255, 0.03) 1px,
         transparent 2px,
